# fizzcomp

./: .gitmodules  README.md  bbplan
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: adeept_awr_description.pc  adeept_awr_gazebo.pc  controller.pc  enph353_gazebo.pc  enph353_npcs.pc  enph353_utils.pc  robbie.pc  time_trials.pc
devel/share/adeept_awr_description/cmake/: adeept_awr_descriptionConfig.cmake
devel/share/adeept_awr_gazebo/cmake/: adeept_awr_gazeboConfig.cmake
devel/share/controller/cmake/: controllerConfig.cmake
devel/share/enph353_gazebo/cmake/: enph353_gazebo-msg-extras.cmake  enph353_gazeboConfig.cmake
devel/share/enph353_npcs/cmake/: enph353_npcsConfig.cmake
devel/share/enph353_utils/cmake/: enph353_utilsConfig.cmake
devel/share/robbie/cmake/: robbieConfig.cmake
devel/share/roseus/ros/enph353_gazebo/: manifest.l
devel/share/roseus/ros/enph353_utils/: manifest.l
devel/share/time_trials/cmake/: time_trialsConfig.cmake
src/controller/: CMakeLists.txt  developer_tools.ui  developer_tools_newer.ui  package.xml
src/controller/logged_data/: data_log_20241203_123630.npz  data_log_20241203_131810.npz  twist_data_20241204_002636.csv
src/controller/src/: bismillah_sequence.py  controller_gui.py  data_logger.py  prediction_module.py  teleport_functions.py  twist_prediction_module.py
src/time_trials/: CMakeLists.txt  package.xml
src/time_trials/launch/: time_trials.launch
src/time_trials/node/: time_trials.py
